[package]
name = "contract"
version = "0.2.0"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casperlabs-contract = { git="https://github.com/CasperLabs/CasperLabs", branch="dev" }
casperlabs-types = { git="https://github.com/CasperLabs/CasperLabs", branch="dev" }
logic = { path = "../logic", package = "logic" }
contract_macro = { git = "https://github.com/CasperLabs/casperlabs_contract_macro", branch = "in_progress", package = "contract_macro"}

[lib]
crate-type = ["cdylib"]
doctest = false
test = false
bench = false

[features]
default = ["casperlabs-contract/std", "casperlabs-types/std"]
