[package]
name = "contract"
version = "0.2.0"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
contract = { git="https://github.com/CasperLabs/CasperLabs", branch="dev", package = "casperlabs-contract" }
ypes = { git="https://github.com/CasperLabs/CasperLabs", branch="dev", package = "casperlabs-types" }
logic = { path = "../logic", package = "logic" }
contract_macro = { git = "https://github.com/CasperLabs/casperlabs_contract_macro", branch = "in_progress", package = "contract_macro"}

[lib]
crate-type = ["cdylib"]
doctest = false
test = false
bench = false

[features]
default = ["casperlabs-contract/std", "casperlabs-types/std"]
