[package]
name = "contract"
version = "0.2.0"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.4.4" }
types = { package = "casper-types", version="1.5.0" }
num-traits = "0.2.15"

[[bin]]
name = "contract"
path = "src/main.rs"
doctest = false
test = false
bench = false

[[bin]]
name = "deposit"
path = "src/deposit.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
