[package]
name = "tests"
version = "0.1.0"
authors = ["karandh <karan@casperlabs.io>","Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casperlabs-contract = { git="https://github.com/CasperLabs/CasperLabs", branch="hackathon" }
casperlabs-types = { git="https://github.com/CasperLabs/CasperLabs", branch="hackathon" }
casperlabs-engine-test-support = { git="https://github.com/CasperLabs/CasperLabs", branch="hackathon" }

[features]
default = ["casperlabs-contract/std", "casperlabs-types/std","casperlabs-contract/test-support"]
