[package]
name = "tests"
version = "0.2.0"
authors = ["karandh <karan@casperlabs.io>", "Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[dependencies]
casperlabs-contract = { git="https://github.com/CasperLabs/CasperLabs", branch="feature-contract-headers" }
casperlabs-types = { git="https://github.com/CasperLabs/CasperLabs", branch="feature-contract-headers" }
casperlabs-engine-test-support = { git="https://github.com/CasperLabs/CasperLabs", branch="feature-contract-headers" }

[features]
default = ["casperlabs-contract/std", "casperlabs-types/std", "casperlabs-contract/test-support"]
